# SeatReservationProgramforAirlines

./: CMakeLists.txt  README.md  datumellenorzo.c  datumellenorzo.h  ellenorzofuggvenyek.c  ellenorzofuggvenyek.h  fajlkezelofuggvenyek.c  fajlkezelofuggvenyek.h  fejleckiiro.c  fejleckiiro.h  jaratok.txt  kiegeszito.txt  lancoltlista.c  lancoltlista.h  main.c  nevbeolvasofuggvenyek.c  nevbeolvasofuggvenyek.h  utasbeolvaso.c  utasbeolvaso.h
